[package]
name = "qcs-api-client-grpc-internal"
version = "0.9.7"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qcs-api-client-common = { path = "../qcs-api-client-common", version = "0.8.14" }
http-body = "0.4.5"
hyper = "0.14.23"
hyper-proxy = { version = "0.9.1", default-features = false, features = [
    "rustls",
] }
hyper-socks2 = { version = "0.8.0", default-features = false }
pbjson = "0.6.0"
prost = "0.12.3"
serde = "1.0"
tonic = { version = "0.11.0", features = ["tls-roots"] }
tonic-web = { version = "0.11.0", optional = true }
pbjson-types = "0.6.0"
tower = "0.4"
thiserror = "1.0.32"
tracing = { version = "0.1.37", optional = true }
# These have to be kept in sync with tracing-opentelemetry
opentelemetry = { workspace = true, optional = true }
opentelemetry_api = { workspace = true, optional = true }
opentelemetry-http = { workspace = true, optional = true }
urlpattern = { version = "0.2.0", optional = true }
url = { version = "2.3.1" }
http = "0.2.8"
backoff = { version = "0.4.0", features = ["tokio"] }
tokio = { version = "1.24.1", features = ["time"] }

[build-dependencies]
tonic-build = "0.11.0"
pbjson-build = "0.6.0"
prost-build = "0.12.3"

[features]
# Can be used to provide HTTP/1.1 support.
grpc-web = ["dep:tonic-web"]
# The old name of the tracing-opentelemetry feature, here for backwards compatibility
otel-tracing = ["tracing-opentelemetry"]
tracing-opentelemetry = ["dep:opentelemetry", "dep:opentelemetry_api", "dep:opentelemetry-http", "tracing-config"]
tracing = ["dep:tracing", "urlpattern", "qcs-api-client-common/tracing"]
tracing-config = ["tracing", "qcs-api-client-common/tracing-config"]

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
futures-util = "0.3.25"
jsonwebtoken = { workspace = true }
once_cell = "1.17.0"
# These have to be kept in sync with tracing-opentelemetry
opentelemetry = { workspace = true, features = ["rt-tokio"] }
opentelemetry_sdk = { workspace = true }
rstest = "0.17.0"
serde_json = "1.0.91"
tempfile = "3.3.0"
tokio = { version = "1.24.1", features = ["parking_lot", "rt-multi-thread"] }
tokio-stream = { version = "0.1.11", features = ["net"] }
tonic-health = "0.11.0"
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
